# cdm-devkit

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  build.gradle  pyproject.toml  settings.gradle
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: integration_tests.yml  release.yml
cdm_asm/: assembler.py  ast_builder.py  ast_nodes.py  code_segments.py  command_handlers.py  error.py  linker.py  macro_processor.py  main.py
cdp-java/: build.gradle  settings.gradle
cocas/: AsmLexer.g4  AsmParser.g4  __init__.py  abstract_code_segments.py  abstract_instructions.py  abstract_params.py  antlr-generate.sh  asm_commands.py  assembler.py  ast_builder.py  ast_nodes.py  code_block.py  code_segments.py  command_handlers.py  debug_export.py  default_code_segments.py  default_instructions.py  error.py  exception_handlers.py  exceptions.py  external_entry.py  linker.py  location.py  macro_processor.py  main.py  object_file.py  object_module.py  types.py  write_image.py
cocas/assembler/: __init__.py  assembler.py  ast_builder.py  ast_nodes.py  code_block.py  constants.py  exceptions.py  external_label_key.py  macro_processor.py  object_generator.py
cocas/grammar/: AsmLexer.g4  AsmParser.g4  ObjectFile.g4  ObjectFileLexer.g4  ObjectFileParser.g4
cocas/linker/: __init__.py  debug_export.py  exceptions.py  image.py  linker.py
cocas/object_file/: __init__.py  exceptions.py  object_export.py  object_file.py  object_import.py
cocas/object_module/: __init__.py  attributes.py  concat_rsects.py  entry.py  external_entry.py  external_entry_key.py  external_label_key.py  linkage.py  location.py  object_module.py  rsects_group.py  symbol_attribute.py
cocas/ple/: __init__.py  _io.py  constants.py  dump.py  exceptions.py  load.py  types.py
cocas/targets/: __init__.py  abstract_code_segments.py  abstract_instructions.py  abstract_params.py
cocodump/: args.py  asm_emitter.py  base_types.py  colorizer.py  label_generator.py  main.py  reader.py  target_loader.py
cocoemu/: build.gradle  cdm16emu.py  cdm16emu_host.py  settings.gradle
cocoemu-server/: build.gradle  settings.gradle
cocoemu-server/cocoemu_server_wrapper/: wrapper.py
docs/: README.md  assembly-templates.md  cdm16.pptx  getting-started.md  quickstart.md  visual-studio-code-extension.md  visual-studio-code.md
docs/cdm16/: cdm16-overivew.md  cdm16-overview.md  cdm16.pptx
docs/cdm16e/: cdm16e-overview.md
docs/guides/: 1-installing.md  10-macros.md  2-extension-overview.md  3-setting-up-project.md  4-debugging.md  5-setting-up-logisim.md  6-debugging-in-logisim.md  7-using-cli.md  8-external-build-systems.md  9-using-python-environments.md
examples/: test_every_goto.asm
examples/cdm8e/: save_restore.asm
logisim/: .gitignore
logisim/cdm16/: cdm16.circ
logisim/cdm16e/: cdm16e.circ
logisim/cdm8/: CdM-8-mark5-full.circ
logisim/cdm8e/: CdM-8e.circ  README.md
logisim/logisim-banked-memory/: build.gradle
logisim/logisim-cdm-emulator/: .gitignore  build.gradle  settings.gradle
logisim/logisim-debugger/: build.gradle  settings.gradle
logisim/logisim-runner/: .gitignore  build.gradle  settings.gradle
outdated/tester/: main.py
syntaxes/: cdm8-assembly.tmLanguage.json
synthm/: args.py  main.py  parser.py  synth.py  util.py
tests/: .gitignore  test_emulators.py  test_processors.py  tests.py
tests/collect/: __init__.py  collected_tests.py  simulation_state.py  validation.py
tests/factory/: __init__.py  collector.py  results.py  tools.py
tests/runners/: __init__.py  emulator.py  logisim.py  runner.py  (+1 more)
vscode-cdm-extension/: .eslintrc.json  .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vsc-extension-quickstart.md  vscode-cdm-extension-1.0.0.vsix  webpack.config.js
(+546 files in other folders)
