[tool.poetry]
name = "cdm-devkit"
version = "0.1.0"
description = "Developer tools for CdM processors"
authors = [
    "leadpogrommer <ilyamerzlakov@gmail.com>",
    "Nikolay Repin <n.repin@g.nsu.ru>",
    "Timofey Khrapovitskiy <vuki03@mail.ru>",
    "Mikhail Krasnikov <m.krasnikov1@g.nsu.ru>",
    "Nikita Tatarinov <n.tatarinov@g.nsu.ru>",
    "Nikita Korotkov <n.korotkov@g.nsu.ru>"
]

#packages = [
#    { include = "cdm_asm" },
#    { include = "cocoemu" },
#]

#[tool.poetry.scripts]
#cdm-asm = 'cdm_asm.main:main'
#cdm-emu = 'cdm_emu.emulator:main'

[tool.poetry.dependencies]
python = "^3.10"
bitstruct = "^8.14.1"
antlr4-python3-runtime = "^4.10"
websocket-server = "^0.6.4"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
